# fiap-mpeg-uploader

./: .coveragerc  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  pyrightconfig.json
.github/workflows/: deploy.yaml  ecr.yaml
fiap_mpeg_uploader/: __main__.py
fiap_mpeg_uploader/infra/db/: client.py  mongo.py
fiap_mpeg_uploader/infra/env/: env.py
fiap_mpeg_uploader/infra/jwt/: main.py
fiap_mpeg_uploader/models/users/: user_db.py  user_dto.py
fiap_mpeg_uploader/routes/pre_signed_url/: main.py
fiap_mpeg_uploader/routes/pre_signed_url/models/: process_protocol_model.py
fiap_mpeg_uploader/routes/pre_signed_url/pre_signed/: pre_signed.py  process_protocol.py
fiap_mpeg_uploader/routes/users/: main.py
fiap_mpeg_uploader/routes/users/create/: create_users.py
fiap_mpeg_uploader/routes/users/login/: login_user.py
fiap_mpeg_uploader/utils/: hash.py
infra/cm/: configmap-producao.yaml  configmap-uploader.yaml
infra/deployment/: deployment-producao.yaml  deployment-uploader.yaml
infra/hpa/: hpa-producao.yaml  hpa-uploader.yaml
infra/secrets/: secrets-producao.yml  secrets-uploader.yml
infra/svc/: service-producao.yaml  service-uploader.yaml
